# QIS_Project

data_processing/: README.md  environment.yml  exceptions.py  providers.py  pyproject.toml  quality.py  requirements.txt
factor/: README.md  environment.yml  exceptions.py  library.py  manifest.py  preprocess.py  pyproject.toml
factor_selection/: README.md  environment.yml  evaluation.py  pyproject.toml
