[build-system]
requires = ["setuptools>=69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ashare-factor-selection"
version = "0.1.0"
description = "Standalone factor evaluation module for A-share research; selection logic to be added later."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "J1ger" }
]
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.2"
]

[tool.setuptools]
py-modules = ["evaluation"]
